Sprint selection: Improve tick overlap avoidance
- Use node text maximum to remove ticks
- Make it possible to remove multiple ticks to make way
- Dynamically adjust width of selector upon resize
- Place sprint metadata header on same line as the metadata itself to
  conserve space in this area while keeping flow

--- a/res/main.scss
+++ b/res/main.scss
@@ -84,6 +84,11 @@ body {
     }
 }
 
+#sprint-meta-header {
+    font-size: .75rem;
+    padding: 0 0.75em 0 0.75em;
+}
+
 svg#num-sprints {
     overflow: visible;
     clip: auto;
